<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_businesscards"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.krupa.businesscards.Businesscards">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/coworking" />

    <LinearLayout
        android:id="@+id/Linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingLeft="10dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coworking"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/address1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/addresscity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="75dp"
            android:paddingTop="4dp"
            android:text="@string/address2"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:paddingTop="4dp"
            android:text="@string/telephone"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:paddingLeft="75dp"
            android:paddingTop="4dp"
            android:text="@string/mobile"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingTop="4dp"
            android:text="@string/mailid"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Linearlayout"
            android:layout_alignStart="@+id/Linearlayout"
            android:layout_below="@+id/Linearlayout"
            android:layout_marginTop="21dp"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/fbart"
                    android:id="@+id/facebook"
                   />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/instagram"
                    android:layout_below="@+id/facebook"
                    android:layout_marginTop="34dp"
                    android:id="@+id/insta"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:text="@string/fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/facebook"
                    android:layout_toEndOf="@+id/facebook"
                    android:id="@+id/facebookid" />

                <TextView
                    android:text="@string/instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/insta"
                    android:layout_toRightOf="@+id/insta"
                    android:layout_toEndOf="@+id/insta"
                    android:id="@+id/instaid" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/google"
                    android:layout_above="@+id/insta"
                    android:layout_toRightOf="@+id/facebookid"
                    android:layout_toEndOf="@+id/facebookid"
                    android:layout_marginLeft="48dp"
                    android:layout_marginStart="48dp"
                    android:id="@+id/google" />

                <TextView
                    android:text="@string/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/google"
                    android:layout_toEndOf="@+id/google"
                    android:id="@+id/googleid" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/twittericon"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/google"
                    android:layout_alignEnd="@+id/google"
                    android:id="@+id/twitter" />

                <TextView
                    android:text="@string/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/instaid"
                    android:layout_toRightOf="@+id/twitter"
                    android:layout_toEndOf="@+id/twitter"
                    android:id="@+id/twitterid" />


            </RelativeLayout>
        </ScrollView>


    </LinearLayout>




</RelativeLayout>

